--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "fast-equals": "^5.2.2",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-history": "^1.4.1",
+    "prosemirror-inputrules": "^1.5.0",
     "prosemirror-keymap": "^1.2.3",
     "prosemirror-model": "^1.25.1",
+    "prosemirror-schema-basic": "^1.2.4",
+    "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.40.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "remeda": "^2.25.0"
+    "remeda": "^2.25.0",
+    "type-fest": "^4.41.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
